[package]
name = "base64_light"
version = "0.1.2"
edition = "2021"

authors = ["kujirahand<web@kujirahand.com>"]
description = "Base64 Encoder & Decoder"
repository = "https://github.com/kujirahand/rust-base64-light"
documentation = "https://docs.rs/base64_light"
readme = "README.md"
keywords = ["base64"]
categories = ["encoding"]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
